antlr/gramaticaParser.py
# Generated from antlr/gramatica.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class gramaticaParser ( Parser ):

    grammarFileName = "gramatica.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'~'", "';'", "'.'", "':'", "','", "'('", 
                     "')'", "':='" ]

    symbolicNames = [ "<INVALID>", "PROGRAM", "INTEGER", "BOOLEAN", "STRING", 
                      "BEGIN", "END", "WHILE", "DO", "READ", "VAR", "FALSE", 
                      "TRUE", "WRITE", "IF", "THEN", "ELSE", "OPREL", "OPAD", 
                      "OPMULT", "OPLOG", "OPNEG", "PVIG", "PONTO", "DPONTOS", 
                      "VIG", "ABPAR", "FPAR", "ATRIB", "CTE", "CADEIA", 
                      "IDENTIFIER", "COMENTARIO", "WS" ]

    RULE_prog = 0
    RULE_decls = 1
    RULE_listDecl = 2
    RULE_declTip = 3
    RULE_listId = 4
    RULE_tip = 5
    RULE_cmdComp = 6
    RULE_listCmd = 7
    RULE_cmd = 8
    RULE_cmdIf = 9
    RULE_cmdWhile = 10
    RULE_cmdRead = 11
    RULE_cmdWrite = 12
    RULE_cmdAtrib = 13
    RULE_expr = 14
    RULE_exprRel = 15
    RULE_exprArit = 16
    RULE_termo = 17
    RULE_fator = 18

    ruleNames =  [ "prog", "decls", "listDecl", "declTip", "listId", "tip", 
                   "cmdComp", "listCmd", "cmd", "cmdIf", "cmdWhile", "cmdRead", 
                   "cmdWrite", "cmdAtrib", "expr", "exprRel", "exprArit", 
                   "termo", "fator" ]

    EOF = Token.EOF
    PROGRAM=1
    INTEGER=2
    BOOLEAN=3
    STRING=4
    BEGIN=5
    END=6
    WHILE=7
    DO=8
    READ=9
    VAR=10
    FALSE=11
    TRUE=12
    WRITE=13
    IF=14
    THEN=15
    ELSE=16
    OPREL=17
    OPAD=18
    OPMULT=19
    OPLOG=20
    OPNEG=21
    PVIG=22
    PONTO=23
    DPONTOS=24
    VIG=25
    ABPAR=26
    FPAR=27
    ATRIB=28
    CTE=29
    CADEIA=30
    IDENTIFIER=31
    COMENTARIO=32
    WS=33

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROGRAM(self):
            return self.getToken(gramaticaParser.PROGRAM, 0)

        def IDENTIFIER(self):
            return self.getToken(gramaticaParser.IDENTIFIER, 0)

        def PVIG(self):
            return self.getToken(gramaticaParser.PVIG, 0)

        def decls(self):
            return self.getTypedRuleContext(gramaticaParser.DeclsContext,0)


        def cmdComp(self):
            return self.getTypedRuleContext(gramaticaParser.CmdCompContext,0)


        def PONTO(self):
            return self.getToken(gramaticaParser.PONTO, 0)

        def EOF(self):
            return self.getToken(gramaticaParser.EOF, 0)

        def getRuleIndex(self):
            return gramaticaParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = gramaticaParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38
            self.match(gramaticaParser.PROGRAM)
            self.state = 39
            self.match(gramaticaParser.IDENTIFIER)
            self.state = 40
            self.match(gramaticaParser.PVIG)
            self.state = 41
            self.decls()
            self.state = 42
            self.cmdComp()
            self.state = 43
            self.match(gramaticaParser.PONTO)
            self.state = 44
            self.match(gramaticaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(gramaticaParser.VAR, 0)

        def listDecl(self):
            return self.getTypedRuleContext(gramaticaParser.ListDeclContext,0)


        def getRuleIndex(self):
            return gramaticaParser.RULE_decls

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecls" ):
                listener.enterDecls(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecls" ):
                listener.exitDecls(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecls" ):
                return visitor.visitDecls(self)
            else:
                return visitor.visitChildren(self)




    def decls(self):

        localctx = gramaticaParser.DeclsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decls)
        try:
            self.state = 49
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [10]:
                self.enterOuterAlt(localctx, 1)
                self.state = 46
                self.match(gramaticaParser.VAR)
                self.state = 47
                self.listDecl()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declTip(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticaParser.DeclTipContext)
            else:
                return self.getTypedRuleContext(gramaticaParser.DeclTipContext,i)


        def getRuleIndex(self):
            return gramaticaParser.RULE_listDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListDecl" ):
                listener.enterListDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListDecl" ):
                listener.exitListDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListDecl" ):
                return visitor.visitListDecl(self)
            else:
                return visitor.visitChildren(self)




    def listDecl(self):

        localctx = gramaticaParser.ListDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_listDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 51
                self.declTip()
                self.state = 54 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==31):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclTipContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def listId(self):
            return self.getTypedRuleContext(gramaticaParser.ListIdContext,0)


        def DPONTOS(self):
            return self.getToken(gramaticaParser.DPONTOS, 0)

        def tip(self):
            return self.getTypedRuleContext(gramaticaParser.TipContext,0)


        def PVIG(self):
            return self.getToken(gramaticaParser.PVIG, 0)

        def getRuleIndex(self):
            return gramaticaParser.RULE_declTip

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclTip" ):
                listener.enterDeclTip(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclTip" ):
                listener.exitDeclTip(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclTip" ):
                return visitor.visitDeclTip(self)
            else:
                return visitor.visitChildren(self)




    def declTip(self):

        localctx = gramaticaParser.DeclTipContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declTip)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.listId()
            self.state = 57
            self.match(gramaticaParser.DPONTOS)
            self.state = 58
            self.tip()
            self.state = 59
            self.match(gramaticaParser.PVIG)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListIdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(gramaticaParser.IDENTIFIER)
            else:
                return self.getToken(gramaticaParser.IDENTIFIER, i)

        def VIG(self, i:int=None):
            if i is None:
                return self.getTokens(gramaticaParser.VIG)
            else:
                return self.getToken(gramaticaParser.VIG, i)

        def getRuleIndex(self):
            return gramaticaParser.RULE_listId

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListId" ):
                listener.enterListId(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListId" ):
                listener.exitListId(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListId" ):
                return visitor.visitListId(self)
            else:
                return visitor.visitChildren(self)




    def listId(self):

        localctx = gramaticaParser.ListIdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_listId)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(gramaticaParser.IDENTIFIER)
            self.state = 66
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==25:
                self.state = 62
                self.match(gramaticaParser.VIG)
                self.state = 63
                self.match(gramaticaParser.IDENTIFIER)
                self.state = 68
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(gramaticaParser.INTEGER, 0)

        def BOOLEAN(self):
            return self.getToken(gramaticaParser.BOOLEAN, 0)

        def STRING(self):
            return self.getToken(gramaticaParser.STRING, 0)

        def getRuleIndex(self):
            return gramaticaParser.RULE_tip

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTip" ):
                listener.enterTip(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTip" ):
                listener.exitTip(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTip" ):
                return visitor.visitTip(self)
            else:
                return visitor.visitChildren(self)




    def tip(self):

        localctx = gramaticaParser.TipContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_tip)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 28) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CmdCompContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BEGIN(self):
            return self.getToken(gramaticaParser.BEGIN, 0)

        def listCmd(self):
            return self.getTypedRuleContext(gramaticaParser.ListCmdContext,0)


        def END(self):
            return self.getToken(gramaticaParser.END, 0)

        def getRuleIndex(self):
            return gramaticaParser.RULE_cmdComp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCmdComp" ):
                listener.enterCmdComp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCmdComp" ):
                listener.exitCmdComp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCmdComp" ):
                return visitor.visitCmdComp(self)
            else:
                return visitor.visitChildren(self)




    def cmdComp(self):

        localctx = gramaticaParser.CmdCompContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_cmdComp)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(gramaticaParser.BEGIN)
            self.state = 72
            self.listCmd()
            self.state = 73
            self.match(gramaticaParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListCmdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def cmd(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticaParser.CmdContext)
            else:
                return self.getTypedRuleContext(gramaticaParser.CmdContext,i)


        def getRuleIndex(self):
            return gramaticaParser.RULE_listCmd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListCmd" ):
                listener.enterListCmd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListCmd" ):
                listener.exitListCmd(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListCmd" ):
                return visitor.visitListCmd(self)
            else:
                return visitor.visitChildren(self)




    def listCmd(self):

        localctx = gramaticaParser.ListCmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_listCmd)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2147508896) != 0):
                self.state = 75
                self.cmd()
                self.state = 80
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CmdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def cmdIf(self):
            return self.getTypedRuleContext(gramaticaParser.CmdIfContext,0)


        def cmdWhile(self):
            return self.getTypedRuleContext(gramaticaParser.CmdWhileContext,0)


        def cmdRead(self):
            return self.getTypedRuleContext(gramaticaParser.CmdReadContext,0)


        def cmdWrite(self):
            return self.getTypedRuleContext(gramaticaParser.CmdWriteContext,0)


        def cmdAtrib(self):
            return self.getTypedRuleContext(gramaticaParser.CmdAtribContext,0)


        def cmdComp(self):
            return self.getTypedRuleContext(gramaticaParser.CmdCompContext,0)


        def getRuleIndex(self):
            return gramaticaParser.RULE_cmd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCmd" ):
                listener.enterCmd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCmd" ):
                listener.exitCmd(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCmd" ):
                return visitor.visitCmd(self)
            else:
                return visitor.visitChildren(self)




    def cmd(self):

        localctx = gramaticaParser.CmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_cmd)
        try:
            self.state = 87
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [14]:
                self.enterOuterAlt(localctx, 1)
                self.state = 81
                self.cmdIf()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 2)
                self.state = 82
                self.cmdWhile()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 3)
                self.state = 83
                self.cmdRead()
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 4)
                self.state = 84
                self.cmdWrite()
                pass
            elif token in [31]:
                self.enterOuterAlt(localctx, 5)
                self.state = 85
                self.cmdAtrib()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 6)
                self.state = 86
                self.cmdComp()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CmdIfContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(gramaticaParser.IF, 0)

        def expr(self):
            return self.getTypedRuleContext(gramaticaParser.ExprContext,0)


        def THEN(self):
            return self.getToken(gramaticaParser.THEN, 0)

        def cmd(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticaParser.CmdContext)
            else:
                return self.getTypedRuleContext(gramaticaParser.CmdContext,i)


        def ELSE(self):
            return self.getToken(gramaticaParser.ELSE, 0)

        def getRuleIndex(self):
            return gramaticaParser.RULE_cmdIf

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCmdIf" ):
                listener.enterCmdIf(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCmdIf" ):
                listener.exitCmdIf(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCmdIf" ):
                return visitor.visitCmdIf(self)
            else:
                return visitor.visitChildren(self)




    def cmdIf(self):

        localctx = gramaticaParser.CmdIfContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_cmdIf)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(gramaticaParser.IF)
            self.state = 90
            self.expr()
            self.state = 91
            self.match(gramaticaParser.THEN)
            self.state = 92
            self.cmd()
            self.state = 95
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 93
                self.match(gramaticaParser.ELSE)
                self.state = 94
                self.cmd()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CmdWhileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(gramaticaParser.WHILE, 0)

        def expr(self):
            return self.getTypedRuleContext(gramaticaParser.ExprContext,0)


        def DO(self):
            return self.getToken(gramaticaParser.DO, 0)

        def cmd(self):
            return self.getTypedRuleContext(gramaticaParser.CmdContext,0)


        def getRuleIndex(self):
            return gramaticaParser.RULE_cmdWhile

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCmdWhile" ):
                listener.enterCmdWhile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCmdWhile" ):
                listener.exitCmdWhile(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCmdWhile" ):
                return visitor.visitCmdWhile(self)
            else:
                return visitor.visitChildren(self)




    def cmdWhile(self):

        localctx = gramaticaParser.CmdWhileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_cmdWhile)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(gramaticaParser.WHILE)
            self.state = 98
            self.expr()
            self.state = 99
            self.match(gramaticaParser.DO)
            self.state = 100
            self.cmd()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CmdReadContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def READ(self):
            return self.getToken(gramaticaParser.READ, 0)

        def ABPAR(self):
            return self.getToken(gramaticaParser.ABPAR, 0)

        def listId(self):
            return self.getTypedRuleContext(gramaticaParser.ListIdContext,0)


        def FPAR(self):
            return self.getToken(gramaticaParser.FPAR, 0)

        def PVIG(self):
            return self.getToken(gramaticaParser.PVIG, 0)

        def getRuleIndex(self):
            return gramaticaParser.RULE_cmdRead

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCmdRead" ):
                listener.enterCmdRead(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCmdRead" ):
                listener.exitCmdRead(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCmdRead" ):
                return visitor.visitCmdRead(self)
            else:
                return visitor.visitChildren(self)




    def cmdRead(self):

        localctx = gramaticaParser.CmdReadContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_cmdRead)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(gramaticaParser.READ)
            self.state = 103
            self.match(gramaticaParser.ABPAR)
            self.state = 104
            self.listId()
            self.state = 105
            self.match(gramaticaParser.FPAR)
            self.state = 106
            self.match(gramaticaParser.PVIG)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CmdWriteContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WRITE(self):
            return self.getToken(gramaticaParser.WRITE, 0)

        def ABPAR(self):
            return self.getToken(gramaticaParser.ABPAR, 0)

        def FPAR(self):
            return self.getToken(gramaticaParser.FPAR, 0)

        def PVIG(self):
            return self.getToken(gramaticaParser.PVIG, 0)

        def expr(self):
            return self.getTypedRuleContext(gramaticaParser.ExprContext,0)


        def CADEIA(self):
            return self.getToken(gramaticaParser.CADEIA, 0)

        def getRuleIndex(self):
            return gramaticaParser.RULE_cmdWrite

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCmdWrite" ):
                listener.enterCmdWrite(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCmdWrite" ):
                listener.exitCmdWrite(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCmdWrite" ):
                return visitor.visitCmdWrite(self)
            else:
                return visitor.visitChildren(self)




    def cmdWrite(self):

        localctx = gramaticaParser.CmdWriteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_cmdWrite)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(gramaticaParser.WRITE)
            self.state = 109
            self.match(gramaticaParser.ABPAR)
            self.state = 112
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 110
                self.expr()
                pass

            elif la_ == 2:
                self.state = 111
                self.match(gramaticaParser.CADEIA)
                pass


            self.state = 114
            self.match(gramaticaParser.FPAR)
            self.state = 115
            self.match(gramaticaParser.PVIG)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CmdAtribContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(gramaticaParser.IDENTIFIER, 0)

        def ATRIB(self):
            return self.getToken(gramaticaParser.ATRIB, 0)

        def expr(self):
            return self.getTypedRuleContext(gramaticaParser.ExprContext,0)


        def PVIG(self):
            return self.getToken(gramaticaParser.PVIG, 0)

        def getRuleIndex(self):
            return gramaticaParser.RULE_cmdAtrib

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCmdAtrib" ):
                listener.enterCmdAtrib(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCmdAtrib" ):
                listener.exitCmdAtrib(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCmdAtrib" ):
                return visitor.visitCmdAtrib(self)
            else:
                return visitor.visitChildren(self)




    def cmdAtrib(self):

        localctx = gramaticaParser.CmdAtribContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_cmdAtrib)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(gramaticaParser.IDENTIFIER)
            self.state = 118
            self.match(gramaticaParser.ATRIB)
            self.state = 119
            self.expr()
            self.state = 120
            self.match(gramaticaParser.PVIG)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exprRel(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticaParser.ExprRelContext)
            else:
                return self.getTypedRuleContext(gramaticaParser.ExprRelContext,i)


        def OPLOG(self, i:int=None):
            if i is None:
                return self.getTokens(gramaticaParser.OPLOG)
            else:
                return self.getToken(gramaticaParser.OPLOG, i)

        def getRuleIndex(self):
            return gramaticaParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)




    def expr(self):

        localctx = gramaticaParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.exprRel()
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==20:
                self.state = 123
                self.match(gramaticaParser.OPLOG)
                self.state = 124
                self.exprRel()
                self.state = 129
                self._errHandler.sync(self)
                _la = self._input.LA(1)
